# RS-Dispatch

./: Cargo.toml  README.md
.github/workflows/: com.yml  rust.yml
src/: client_tests.cpp  com_errors.rs  dcom_interface.cpp  dcom_interface.lib  idispatchw.rs  lib.rs
src/com/: com_module.rs  mod.rs
src/common/: errors.rs
src/dcom/: client_tests.cpp
