[package]
name = "rs-dispatch"
version = "0.1.0"
edition = "2021"
authors = ["LiorBuch"]
description = "a crate to wrap IDispatch and Com Objects for simplified use."
repository = "https://github.com/LiorBuch/RS-Dispatch"
license-file= "LICENSE.txt"
license = "MIT"
readme = "README.md"
keywords = ["dll","com","windows","idispatch"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
windows = {version="0.54.0",features = ["Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    ]}
windows-interface = "0.53.0"
serde_json = "1.0.1"